<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/selection_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:contentPadding="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/select_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/calc_number_from_bands"
                    android:layout_marginBottom="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/selected_bands">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/selected_bands_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:inputType="none"
                        android:textIsSelectable="true"
                        android:textAlignment="center"
                        android:importantForAutofill="no"
                        tools:text="1,2,3,4,5,6,7,8,9"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_bands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/select_bands"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/result">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/result_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:inputType="none"
                        android:textIsSelectable="true"
                        android:textAlignment="center"
                        android:importantForAutofill="no"
                        tools:text="1894745792392"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/copy_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/copy_result"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/calc_bands_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/calc_bands_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/calc_bands_from_number"
                    android:layout_marginBottom="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/bands">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/calc_bands_output"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:inputType="none"
                        android:textIsSelectable="true"
                        android:textAlignment="center"
                        android:importantForAutofill="no"
                        tools:text="1,2,3,4,5,6,7,8,9"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/value">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/calc_bands_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:textIsSelectable="true"
                        android:textAlignment="center"
                        android:importantForAutofill="no"
                        tools:text="1894745792392"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>